--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./asset/css/reset.css" />
     <link rel="stylesheet" href="./asset/css/style.css" />
     <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 992px)" href="./asset/css/adapt.css" />
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./asset/css/phone.css" />
     <script src="https://kit.fontawesome.com/bb54014cd5.js"></script>
     <title>Booki</title>
 </head>
@@ -16,32 +17,32 @@
             <img class="headerLogo" src="./asset/img/Booki.png" alt="logo">
             <nav class="headerNavigation">
                 <ul class="navigationList">
-                    <a href="#hebergement">
-                        <li>Hébergement</li>
-                    </a>
-                    <li>Activités</li>
+                    <li class="navigationList1"><a href="#hebergement" style="text-decoration-line: none">Hébergement</a></li>
+                    <li class="navigationList1"><a href="#activités" style="text-decoration-line: none">Activités</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>Trouvez votre heberdement bour des vacances de rêve</h1>
-            <p style="margin-top: 10px">En plein centre ville ou en pleine nature</p>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p style="margin-top: 10px" class="subtitle">En plein centre ville ou en pleine nature</p>
             <div class="localisation">
                 <form action="">
                     <i class="fas fa-map-marker-alt"></i><input class="localisationVille" type="search"><button class="localisationSearch" type="button" onclick=""> Rechercher </button>
                 </form>
             </div>
             <div class="filtreContainer">
-                <ul class="filtre">
-                    <li class="filtreTitle">Filtres</li>
-                    <li class="filtreBorder"><i class="fas fa-money-bill-wave"></i>Économique</li>
-                    <li class="filtreBorder"><i class="fas fa-child"></i>Familial</li>
-                    <li class="filtreBorder"><i class="fas fa-heart"></i>Romantique</li>
-                    <li class="filtreBorder"><i class="fas fa-dog"></i>Animaux autorisés</li>
-                </ul>
-                <p class="info">
-                    <i class="fas fa-info" size="7x" ></i> Plus de 500 logements sont disponibles dans cette ville
-                </p>
+                <div class="filtreBloc">
+                    <h2 class="filtreTitle">Filtres</h2>
+                    <ul class="filtre">
+                        <li class="filtreBorder"><i class="fas fa-money-bill-wave"></i>Économique</li>
+                        <li class="filtreBorder"><i class="fas fa-child"></i>Familial</li>
+                        <li class="filtreBorder"><i class="fas fa-heart"></i>Romantique</li>
+                        <li class="filtreBorder"><i class="fas fa-dog"></i>Animaux autorisés</li>
+                    </ul>
+                </div>
+                <div class="info">
+                    <i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville
+                </div>
             </div>
             <div class="figureContainer">
                 <div class="figureContainerBloc1">
@@ -199,7 +200,7 @@
                 </div>
             </div>
             <div class="figureContainer2">
-                <h2 style="margin-bottom: 20px">Activités à Marseille</h2>
+                <h2 id="activités" style="margin-bottom: 20px">Activités à Marseille</h2>
                 <div class="figureContainer2BlocContent">
                     <div class="figureContainer2Bloc">
                         <div class="figure2Bloc1">
