responsive is done

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img class="headerLogo" src="./asset/img/Booki.png" alt="logo">
             <nav class="headerNavigation">
                 <ul class="navigationList">
-                    <li class="navigationList1"><a href="#hebergement" style="text-decoration-line: none">Hébergement</a></li>
-                    <li class="navigationList1"><a href="#activités" style="text-decoration-line: none">Activités</a></li>
+                    <li class="navigationList1"><a href="#hebergement" style="text-decoration-line: none">Hébergements</a></li>
+                    <li class="navigationList2"><a href="#activités" style="text-decoration-line: none">Activités</a></li>
                 </ul>
             </nav>
         </header>
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="figureContainer2Bloc">
+                    <div class="figureContainer2Bloc1">
                         <div class="figure2Bloc1">
                             <img class="image2Bloc1" src="./asset/img/kilyan-sockalingum.jpg" alt="vieux fort">
                             <p>Parc National des Calanques</p>
