ajout search bouton

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p style="margin-top: 10px" class="subtitle">En plein centre ville ou en pleine nature</p>
             <div class="localisation">
-                <form action="">
-                    <i class="fas fa-map-marker-alt"></i><input class="localisationVille" type="search"><button class="localisationSearch" type="button" onclick=""> Rechercher </button>
+                <form>
+                    <i class="fas fa-map-marker-alt"></i><input class="localisationVille" type="search"><button class="localisationSearch" type="button" onclick=""> Rechercher </button><i class="fas fa-search"></i>
+                    <!-- <i class="fas fa-map-marker-alt"></i> -->
                 </form>
             </div>
             <div class="filtreContainer">
