--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p style="margin-top: 10px" class="subtitle">En plein centre ville ou en pleine nature</p>
             <div class="localisation">
                 <form>
-                    <i class="fas fa-map-marker-alt"></i><input class="localisationVille" type="search"><button class="localisationSearch" type="button" onclick=""> Rechercher </button><i class="fas fa-search"></i>
+                    <i class="fas fa-map-marker-alt"></i><input class="localisationVille" type="search"><button class="localisationSearch" type="button" onclick=""> Rechercher </button><i class="fas fa-search" onclick=""></i>
                     <!-- <i class="fas fa-map-marker-alt"></i> -->
                 </form>
             </div>
