rajout fichier bigscreen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/css/reset.css" />
     <link rel="stylesheet" href="./asset/css/style.css" />
+    <link rel="stylesheet" media="screen and (min-width: 993px) and (max-width: 1429px)" href="./asset/css/bigscreen.css" />
     <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 992px)" href="./asset/css/adapt.css" />
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="./asset/css/phone.css" />
     <script src="https://kit.fontawesome.com/bb54014cd5.js"></script>
